--- a/.github/workflows/build-actions.yml
+++ b/.github/workflows/build-actions.yml
@@ -54,4 +54,4 @@ jobs:
           docker stop $IMAGE_NAME
           docker rm $IMAGE_NAME
           docker pull $IMAGE_ID:latest
-          docker run -p 2301:80 --name $IMAGE_NAME $IMAGE_ID:latest
+          docker run -p 2301:80 --name $IMAGE_NAME -d $IMAGE_ID:latest
