update: project info & add `styled-components`

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "柯灰记账",
+  "name": "柯灰记账本",
   "icons": [
     {
       "src": "favicon.ico",
