--- a/nginx.conf
+++ b/nginx.conf
@@ -8,6 +8,7 @@ http {
           listen 80;
           location / {
                 root   /usr/share/nginx/html;
+                try_files $uri $uri/ $uri/index.html /index.html;
                 autoindex off;
           }
     }
