--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "柯灰记账",
-  "name": "柯灰记账本",
+  "short_name": "青鱼记账",
+  "name": "青鱼记账",
   "icons": [
     {
       "src": "favicon.ico",
