--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "http-proxy-middleware": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.22.5",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
     "recoil": "^0.5.2",
