--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/styled-components": "^5.1.15",
     "history": "5",
     "http-proxy-middleware": "^2.0.1",
+    "rc-notification": "^4.5.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.5",
