--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
     "recoil": "^0.5.2",
+    "sass": "^1.46.0",
     "styled-components": "^5.3.3",
     "typescript": "^4.1.2"
   },
