--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.5",
     "react-router-dom": "6",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.0",
     "recoil": "^0.5.2",
     "sass": "^1.46.0",
     "styled-components": "^5.3.3",
@@ -50,6 +50,9 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "autoprefixer": "^10.4.2",
+    "cross-env": "^7.0.3",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.15"
   }
 }
