--- a/package.json
+++ b/package.json
@@ -1,58 +1,43 @@
 {
-  "name": "lite-bookkeeping-fe",
-  "version": "0.1.1",
+  "name": "lite-bookkeeping-web",
   "private": true,
+  "version": "0.0.1",
+  "scripts": {
+    "start": "cross-env BUILD_ENV=dev yarn preexecute && yarn dev",
+    "dev": "vite",
+    "build": "cross-env BUILD_ENV=production yarn preexecute && tsc && vite build",
+    "build:testing": "cross-env BUILD_ENV=testing yarn preexecute && tsc && vite build",
+    "preview": "preexecute && vite preview",
+    "preexecute": "yarn gen:build-info",
+    "gen:build-info": "node ./myscripts/build-info.js",
+    "gen:api": "kohapi-generator yapi-client-ts"
+  },
+  "author": {
+    "name": "kohai",
+    "email": "i@kohai.dev",
+    "url": "https://kohai.dev"
+  },
   "dependencies": {
-    "@kohapi/generator": "^0.0.1-alpha.10",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/styled-components": "^5.1.15",
-    "history": "5",
-    "http-proxy-middleware": "^2.0.1",
     "rc-notification": "^4.5.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.5",
-    "react-router-dom": "6",
-    "react-scripts": "5.0.0",
+    "react-router-dom": "^6.2.1",
     "recoil": "^0.5.2",
     "sass": "^1.46.0",
-    "styled-components": "^5.3.3",
-    "typescript": "^4.1.2"
-  },
-  "scripts": {
-    "start": "cross-env BUILD_ENV=dev yarn preexecute && react-scripts start",
-    "build": "cross-env BUILD_ENV=production yarn preexecute && react-scripts build",
-    "build:testing": "cross-env BUILD_ENV=testing yarn preexecute && react-scripts build",
-    "preexecute": "yarn gen:build-info",
-    "gen:build-info": "node ./myscripts/build-info.js",
-    "gen:api": "kohapi-generator yapi-client-ts",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@kohapi/generator": "^0.0.1-alpha.10",
+    "@types/react": "^17.0.33",
+    "@types/react-dom": "^17.0.10",
+    "@types/styled-components": "^5.1.15",
+    "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.2",
     "cross-env": "^7.0.3",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.15"
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.21",
+    "typescript": "^4.5.4",
+    "vite": "^2.8.0"
   }
 }
