--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "url": "https://kohai.dev"
   },
   "dependencies": {
+    "history": "5",
     "rc-notification": "^4.5.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
