--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
     "tailwindcss": "^3.0.21",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
+  },
+  "resolutions": {
+    "csstype": "3.0.11"
   }
 }
