--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.5",
     "react-router-dom": "^6.2.1",
+    "react-swipeable-views": "^0.14.0",
     "recoil": "^0.5.2",
     "sass": "^1.46.0",
     "styled-components": "^5.3.3"
@@ -37,6 +38,7 @@
     "@types/node": "^17.0.17",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "@types/react-swipeable-views": "^0.13.1",
     "@types/styled-components": "^5.1.15",
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.2",
