--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
   "name": "lite-bookkeeping-web",
-  "private": true,
   "version": "0.0.2",
-  "scripts": {
-    "start": "cross-env BUILD_ENV=dev yarn preexecute && yarn dev",
-    "dev": "vite",
-    "build": "cross-env BUILD_ENV=production yarn preexecute && tsc && vite build",
-    "build:testing": "cross-env BUILD_ENV=testing yarn preexecute && tsc && vite build",
-    "preview": "preexecute && vite preview",
-    "preexecute": "yarn gen:build-info",
-    "gen:build-info": "node ./myscripts/build-info.js",
-    "gen:api": "kohapi-generator yapi-client-ts"
-  },
+  "private": true,
   "author": {
     "name": "kohai",
     "email": "i@kohai.dev",
     "url": "https://kohai.dev"
+  },
+  "scripts": {
+    "build": "cross-env BUILD_ENV=production yarn preexecute && tsc && vite build",
+    "build:testing": "cross-env BUILD_ENV=testing yarn preexecute && tsc && vite build",
+    "dev": "vite",
+    "gen:api": "kohapi-generator yapi-client-ts",
+    "gen:build-info": "node ./scripts/build-info.js",
+    "preexecute": "yarn gen:build-info",
+    "preview": "preexecute && vite preview",
+    "start": "cross-env BUILD_ENV=dev yarn preexecute && yarn dev"
+  },
+  "resolutions": {
+    "csstype": "3.0.11"
   },
   "dependencies": {
     "@emotion/react": "^11.8.1",
@@ -47,8 +50,5 @@
     "tailwindcss": "^3.0.21",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
-  },
-  "resolutions": {
-    "csstype": "3.0.11"
   }
 }
